# MLPA

./: .gitignore  CMakeLists.txt  README.md  main.cpp
script/: pa2.py  test_pa2.py
src/: BayesianRegression.cpp  BayesianRegression.h  Clustering.cpp  Clustering.h  ClusteringBase.cpp  ClusteringBase.h  EM.cpp  EM.h  GMM.cpp  GMM.h  KMeans.cpp  KMeans.h  Kernels.cpp  Kernels.h  LASSORegression.cpp  LASSORegression.h  LSRegression.cpp  LSRegression.h  MeanShift.cpp  MeanShift.h  Polynomial.cpp  Polynomial.h  RLSRegression.cpp  RLSRegression.h  RegressionBase.cpp  RegressionBase.h  RobustRegression.cpp  RobustRegression.h  utils.cpp  utils.h
test/: CMakeLists.txt  clustering_test.cpp  counting_people_test.cpp  image_segmentation_test.cpp  mlpa_tests.cpp  regression_test.cpp
